--- a/src/App.css
+++ b/src/App.css
@@ -9,12 +9,10 @@
 
 .App-header {
   background-color: white;
-  min-height: 25vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
 }
 
@@ -36,6 +34,7 @@
 }
 
 #bootstrap-overrides .margin-change {
-  margin-left: 4px;
-  margin-right: 4px;
+  margin-left: 2px;
+  margin-right: 2px;
+  margin-bottom: 4px;
 }
