Add correct positioning and sizing for Bootstrap 4 popover.

--- a/src/App.css
+++ b/src/App.css
@@ -52,3 +52,8 @@
 #bootstrap-overrides .popover-header {
   color: black;
 }
+
+.popover .arrow::after,
+.popover .arrow::before {
+  left: 104px;
+}
